# minirl

./: CMakeLists.txt  LICENSE  README.md  buffer.c  buffer.h  char.h  export.h  io.h  key_binding.c  key_binding.h  minirl.c  private.h  utf8.c  utf8.h  utf8data.c  utils.h
include/: minirl.h
utf8data/: ReadMe.txt
